@@ -5,7 +5,7 @@
             "name": "Geolite2 Country",
             "db_type": "GeoIP",
             "method": "GET",
-            "url": "https://predator.vultureproject.org/ipsets/GeoLite2-Country.mmdb",
+            "url": "https://barricade.vultureproject.org/ipsets/GeoLite2-Country.mmdb",
             "verify_cert": true,
             "filename": "GeoLite2-Country.mmdb",
             "description": "Maxmind DBs Geoip country database",
@@ -21,7 +21,7 @@
             "name": "Geolite2 City",
             "db_type": "GeoIP",
             "method": "GET",
-            "url": "https://predator.vultureproject.org/ipsets/GeoLite2-City.mmdb",
+            "url": "https://barricade.vultureproject.org/ipsets/GeoLite2-City.mmdb",
             "verify_cert": true,
             "filename": "GeoLite2-City.mmdb",
             "description": "Maxmind DBs Geoip city database",
