@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## Unreleased
+### Fixed
+- [REPUTATION] Changed predator references to barricade
 
 
 ## [2.14.2] - 2024-02-19
